# oprattr

./: CHANGELOG.md  README.md  pyproject.toml
src/attrops/: __init__.py  _operations.py  _types.py  mixins.py
src/oprattr/: __init__.py  __init__.pyi  _abstract.py  _operand.py  _operand.pyi  _operations.py  abstract.py  mixins.py  operators.py  typeface.py
tests/: print-exceptions.py  test_attribute.py  test_object.py
