[project]
name = "attrops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Young", email = "myoung.space.science@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.1",
    "scipy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
